--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
-apply from: 'dependencies.gradle'
-
 buildscript {
     apply from: 'dependencies.gradle'
 
     repositories {
+        google()
         jcenter()
     }
     dependencies {
