--- a/robototextview-gradle-plugin/build.gradle
+++ b/robototextview-gradle-plugin/build.gradle
@@ -8,12 +8,12 @@ test {
 }
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
+    implementation gradleApi()
+    implementation localGroovy()
 
-    testCompile gradleTestKit()
-    testCompile libraries.junit
-    testCompile gradlePlugins.android
+    testImplementation gradleTestKit()
+    testImplementation libraries.junit
+    testImplementation gradlePlugins.android
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
