--- a/robototextview-sample/build.gradle
+++ b/robototextview-sample/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile project(':robototextview')
+    implementation project(':robototextview')
 }
 
 android {
