--- a/robototextview/build.gradle
+++ b/robototextview/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-    compile libraries.supportAppCompat
+    implementation libraries.supportAppCompat
 }
 
 android {
