--- a/robototextview-sample/build.gradle
+++ b/robototextview-sample/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
     implementation project(':robototextview')
+    implementation libraries.supportAppCompat
 }
 
 android {
